dev/traefik/tinyauth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinyauth
  namespace: traefik
spec:
  selector:
    app: tinyauth
  ports:
    - name: http
      port: 80
      targetPort: 3000
