dev/traefik/tinyauth/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tinyauth
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/target: 202.215.58.76
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tinyauth.mtaku3.com`)
      kind: Rule
      services:
        - name: tinyauth
          port: http
  tls:
    secretName: tinyauth-tls-cert
